--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -17,17 +17,8 @@ category:            Network
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-library
-  -- exposed-modules:
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base ^>=4.12.0.0
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-
 executable provenian-api-server
   main-is:             Main.hs
-  -- other-modules:
   -- other-extensions:
   build-depends:
     base ^>=4.12.0.0,
@@ -36,6 +27,7 @@ executable provenian-api-server
     wai,
     warp,
     aeson,
+    aeson-casing,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
