--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3"
 
 services:
   db:
-    image: mysql:8
+    image: mysql:5.7
     environment:
+      MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: local
       MYSQL_DATABASE: provenian
       TZ: "Asia/Tokyo"
     ports:
