--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -28,9 +28,30 @@ executable provenian-api-server
     warp,
     aeson,
     aeson-casing,
+    stm,
+    persistent,
+    persistent-mysql,
+    persistent-template,
+    reflection,
+    mtl,
+    resource-pool,
+    monad-logger,
+    conduit,
+    mysql-haskell,
+    resource-pool,
+    monad-control,
+    io-streams,
+    text,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
     DataKinds
     TypeOperators
     DeriveGeneric
+    MultiParamTypeClasses
+    TypeFamilies
+    ExistentialQuantification
+    GeneralizedNewtypeDeriving
+    OverloadedStrings
+    FlexibleContexts
+    FlexibleInstances
