--- a/database-generic-mapper/database-generic-mapper.cabal
+++ b/database-generic-mapper/database-generic-mapper.cabal
@@ -18,6 +18,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:
+    Database.Generics.Mapper.MySQL
     Database.Generics.Mapper
   build-depends:
     base,
