--- a/database-generic-mapper/database-generic-mapper.cabal
+++ b/database-generic-mapper/database-generic-mapper.cabal
@@ -22,6 +22,7 @@ library
     Database.Generics.Mapper
   build-depends:
     base,
+    text,
     generic-deriving,
   hs-source-dirs:     src
   default-language:   Haskell2010
