--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -38,6 +38,7 @@ executable provenian-api-server
     monad-control,
     io-streams,
     text,
+    database-generic-mapper,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
