--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -19,7 +19,17 @@ extra-source-files:  CHANGELOG.md
 
 executable provenian-api-server
   main-is:             Main.hs
-  -- other-extensions:
+  --  other-extensions:
+  other-modules:
+    Domain.App
+    Domain.InfraInterface.IProblemRepo
+    Domain.Problem
+    Domain.Submission
+    Driver.MySQL
+    Infra.Repository.ProblemRepo
+    Web.Handler.Problems
+    Web.Handler.Submissions
+    Web.Presenters
   build-depends:
     base ^>=4.12.0.0,
     servant,
@@ -33,12 +43,14 @@ executable provenian-api-server
     mtl,
     resource-pool,
     monad-logger,
-    mysql-haskell,
     resource-pool,
     monad-control,
     io-streams,
     text,
     database-generic-mapper,
+    mysql-simple,
+    mysql,
+    binary,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
