--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -51,6 +51,7 @@ executable provenian-api-server
     mysql-simple,
     mysql,
     binary,
+    unix-time,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
