--- a/database-generic-mapper/database-generic-mapper.cabal
+++ b/database-generic-mapper/database-generic-mapper.cabal
@@ -23,6 +23,7 @@ library
   build-depends:
     base,
     text,
+    containers,
     generic-deriving,
   hs-source-dirs:     src
   default-language:   Haskell2010
@@ -39,6 +40,7 @@ test-suite tests
     base,
     tasty,
     tasty-hspec,
+    containers,
     database-generic-mapper,
   hs-source-dirs:      test
   default-language:    Haskell2010
