--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -52,6 +52,7 @@ executable provenian-api-server
     mysql,
     binary,
     unix-time,
+    containers,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
