--- a/provenian-api-server.cabal
+++ b/provenian-api-server.cabal
@@ -55,6 +55,7 @@ library
     binary,
     unix-time,
     containers,
+    uuid,
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:
